<resources>
    <string name="app_name">NO+maltrato</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="aboutapp">NO + maltrato</string>

    <string name="registro_usuario">REGISTRO DE USUARIO</string>
    <string name="lbl_nomusuario">Nombre de usuario:</string>
    <string name="lbl_email">Email:</string>
    <string name="lbl_telefono">Telefono:</string>
    <string name="lbl_password">Contraseña:</string>
    <string name="lbl_repassword">Repita contraseña:</string>

    <string name="btn_registrarse">Registrarse</string>
    <string name="lbl_yausuario">¿Ya es un usuario?</string>
    <string name="btn_ingresar">Ingresar</string>

    <string name="title_activity_ingreso_usuario">INGRESO DE USUARIO</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_crear_reporte">Crear Reporte</string>

    <string name="crear_reporte">CREAR REPORTE</string>
    <string name="obtener_foto">Adjuntar Foto</string>
    <string name="sin_foto">Sin Foto</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_condiciones_legales">Condiciones_legales</string>
    <string-array name="Parentesco">
        <item>Abuelo/a</item>
        <item>Padre</item>
        <item>Madre</item>
        <item>Hermano/a</item>
        <item>Primo/a</item>
        <item>Tío/a</item>
        <item>Niñera/a</item>
        <item>Otro</item>
    </string-array>
    <string name="title_activity_recover__password">Recover_Password</string>
</resources>
