<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:onClick="ingreso"
    android:background="@color/grey">
    <TextView
        style="@style/title"
        android:text="@string/title_activity_ingreso_usuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey">
        <LinearLayout
            style="@style/main_window"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                style="@style/txt_view"
                android:id="@+id/fullscreen_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_email" />

            <EditText
                style="@style/txt_edith_view"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:layout_gravity="left|top"
                android:hint="micorreo@correo.com"
                android:id="@+id/txt_email"/>
            <TextView
                style="@style/txt_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_password"/>

            <EditText
                style="@style/txt_edith_view"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:id="@+id/txt_password"
                android:hint="de 8 caraceres o más"/>
            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <TextView
                style="@style/txt_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Recuperar contraseña"
                android:id="@+id/txt_recuperar"
                android:layout_gravity="center_horizontal"
                android:textSize="15dp"
                android:onClick="recuperar" />
            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <Button
                android:paddingRight="20dp"
                style="@style/btn_buttons_blue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_ingresar"
                android:id="@+id/ingreso"
                android:onClick="iniciar"
                android:drawableRight="@drawable/ic_action_picturelog" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>